--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Croissant Practive</title>
-</head>
-<body>
-    <h1>Welcome to Croissant Practice</h1>~
-    <p>You can find an image of Croissant practice <a>here</a>.
-     </br>
-     If you wish to contact Croissant Practice, you can do it <a>here</a>.
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>🥐 Croissant Practice 👩🏻‍💻</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Welcome to Croissant Practice</h1>
+    <div class="aboutCroissant">
+      <h2>What is Croissant Practice, you may ask?</h2>
+      <h4>
+        Croissant Practice refers to a coding practice related to SheCodes
+        Responsive Course.<br />
+        Is a practice you can do on Week 3 and is named after the famous french
+        pastry.
+      </h4>
+    </div>
+    <p>
+      <strong>
+        You can find an image of a Croissant <a href="/photo.html">here</a>.
+        <br />
+        If you wish to know more about Croissant Practice, you can do it
+        <a href="contact.html">here</a>.</strong
+      >
     </p>
-</body>
+    <footer>
+      <a href="index.html">Homepage</a>
+      <a href="photo.html">Croissant</a>
+      <a href="about.html">About</a>
+    </footer>
+  </body>
 </html>
