--- a/about.html
+++ b/about.html
@@ -57,7 +57,8 @@
     <p>
       Croissant Practice can be found on this
       <a href="https://github.com/anah-cordeiro/Croissant">GitHub repository</a>
-      or hosted on Netlify <a href="">here</a>
+      or hosted on Netlify
+      <a href="https://friendly-yeot-9b4dd8.netlify.app/">here</a>
     </p>
     <footer>
       <a href="index.html">Homepage</a>
