--- a/about.html
+++ b/about.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Curiosities about croissants related to a practice project for SheCodes Responsive Workshop"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Croissants</title>
+    <title>About Croissants - SheCodes Workshops</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -56,9 +60,13 @@
     </ul>
     <p>
       Croissant Practice can be found on this
-      <a href="https://github.com/anah-cordeiro/Croissant">GitHub repository</a>
-      or hosted on Netlify
-      <a href="https://friendly-yeot-9b4dd8.netlify.app/">here</a>
+      <a
+        href="https://github.com/anah-cordeiro/Croissant"
+        title="GitHub Repository for this project"
+        >GitHub repository</a
+      >
+      or hosted on
+      <a href="https://friendly-yeot-9b4dd8.netlify.app/">Netlify</a>
     </p>
     <footer>
       <a href="index.html">Homepage</a>
