--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="A practice project for SheCodes Responsive Workshop"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🥐 Croissant Practice 👩🏻‍💻</title>
+    <title>🥐 Croissant Practice 👩🏻‍💻 - SheCodes Workshops</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
