--- a/photo.html
+++ b/photo.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="An image of someone holding a croissant"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant Image</title>
+    <title>Croissant Image - SheCodes Workshops</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Le Croissant</h1>
-    <img src="media/croissant.jpg" />
+    <img src="media/croissant.jpg" alt="Someone holding a croissant" />
     <footer>
       <a href="index.html">Homepage</a>
       <a href="photo.html">Croissant</a>
