--- a/index.html
+++ b/index.html
@@ -8,11 +8,22 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🥐 Croissant Practice 👩🏻‍💻 - SheCodes Workshops</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Welcome to Croissant Practice</h1>
-    <div class="aboutCroissant">
+    <div class="aboutCroissant d-block">
       <h2>What is Croissant Practice, you may ask?</h2>
       <h4>
         Croissant Practice refers to a coding practice related to SheCodes
